--- a/apps/ios/SimpleX SE/cs.lproj/InfoPlist.strings
+++ b/apps/ios/SimpleX SE/cs.lproj/InfoPlist.strings
@@ -1,9 +1,7 @@
-/* Bundle display name */
-"CFBundleDisplayName" = "SimpleX SE";
+/* 
+  InfoPlist.strings
+  SimpleX
 
-/* Bundle name */
-"CFBundleName" = "SimpleX SE";
-
-/* Copyright (human-readable) */
-"NSHumanReadableCopyright" = "Autorská práva © 2024 SimpleX Chat. Všechna práva vyhrazena.";
-
+  Created by EP on 30/07/2024.
+  Copyright © 2024 SimpleX Chat. All rights reserved.
+*/
