--- a/apps/ios/SimpleX SE/cs.lproj/Localizable.strings
+++ b/apps/ios/SimpleX SE/cs.lproj/Localizable.strings
@@ -1,111 +1,7 @@
-/* No comment provided by engineer. */
-"%@" = "%@";
+/* 
+  Localizable.strings
+  SimpleX
 
-/* No comment provided by engineer. */
-"App is locked!" = "Aplikace je uzamčena!";
-
-/* No comment provided by engineer. */
-"Cancel" = "Zrušit";
-
-/* No comment provided by engineer. */
-"Cannot access keychain to save database password" = "Nelze získat přístup k úložišti klíčů pro uložení hesla databáze";
-
-/* No comment provided by engineer. */
-"Cannot forward message" = "Nelze přeposlat zprávu";
-
-/* No comment provided by engineer. */
-"Comment" = "Komentář";
-
-/* No comment provided by engineer. */
-"Currently maximum supported file size is %@." = "Aktuálně maximální podporovaná velikost souboru je %@.";
-
-/* No comment provided by engineer. */
-"Database downgrade required" = "Vyžaduje se downgrade databáze";
-
-/* No comment provided by engineer. */
-"Database encrypted!" = "Databáze je šifrována!";
-
-/* No comment provided by engineer. */
-"Database error" = "Chyba databáze";
-
-/* No comment provided by engineer. */
-"Database passphrase is different from saved in the keychain." = "Přístupová fráze databáze se liší od uložené v úložišti klíčů.";
-
-/* No comment provided by engineer. */
-"Database passphrase is required to open chat." = "Pro otevření chatu je vyžadována přístupová fráze databáze.";
-
-/* No comment provided by engineer. */
-"Database upgrade required" = "Vyžaduje se upgrade databáze";
-
-/* No comment provided by engineer. */
-"Error preparing file" = "Chyba přípravy souboru";
-
-/* No comment provided by engineer. */
-"Error preparing message" = "Chyba přípravy zprávy";
-
-/* No comment provided by engineer. */
-"Error: %@" = "Chyba: %@";
-
-/* No comment provided by engineer. */
-"File error" = "Chyba souboru";
-
-/* No comment provided by engineer. */
-"Incompatible database version" = "Nekompatibilní verze databáze";
-
-/* No comment provided by engineer. */
-"Invalid migration confirmation" = "Neplatné potvrzení migrace";
-
-/* No comment provided by engineer. */
-"Keychain error" = "Chyba úložiště klíčů";
-
-/* No comment provided by engineer. */
-"Large file!" = "Velký soubor!";
-
-/* No comment provided by engineer. */
-"No active profile" = "Žádný aktivní profil";
-
-/* No comment provided by engineer. */
-"Ok" = "OK";
-
-/* No comment provided by engineer. */
-"Open the app to downgrade the database." = "Otevřete aplikaci pro downgrade databáze.";
-
-/* No comment provided by engineer. */
-"Open the app to upgrade the database." = "Otevřete aplikaci pro upgrade databáze.";
-
-/* No comment provided by engineer. */
-"Passphrase" = "Přístupová fráze";
-
-/* No comment provided by engineer. */
-"Please create a profile in the SimpleX app" = "Vytvořte prosím profil v aplikaci SimpleX";
-
-/* No comment provided by engineer. */
-"Selected chat preferences prohibit this message." = "Vybrané předvolby chatu zakazují tuto zprávu.";
-
-/* No comment provided by engineer. */
-"Sending a message takes longer than expected." = "Odesílání zprávy trvá déle než očekáváno.";
-
-/* No comment provided by engineer. */
-"Sending message…" = "Odesílání zprávy…";
-
-/* No comment provided by engineer. */
-"Share" = "Sdílet";
-
-/* No comment provided by engineer. */
-"Slow network?" = "Pomalá síť?";
-
-/* No comment provided by engineer. */
-"Unknown database error: %@" = "Neznámá chyba databáze: %@";
-
-/* No comment provided by engineer. */
-"Unsupported format" = "Nepodporovaný formát";
-
-/* No comment provided by engineer. */
-"Wait" = "Čekejte";
-
-/* No comment provided by engineer. */
-"Wrong database passphrase" = "Nesprávná přístupová fráze databáze";
-
-/* No comment provided by engineer. */
-"You can allow sharing in Privacy & Security / SimpleX Lock settings." = "You can allow sharing in Privacy &amp; Security / SimpleX Lock settings.";
-
+  Created by EP on 30/07/2024.
+  Copyright © 2024 SimpleX Chat. All rights reserved.
+*/
