--- a/website/langs/ar.json
+++ b/website/langs/ar.json
@@ -259,8 +259,8 @@
     "directory": "دليل",
     "about-and-contact-us": "عن واتصل بنا",
     "index-hero-h1": "كن<br>حراً",
-    "index-hero-h2": "حرية وأمن<br>اتصالاتك",
-    "index-hero-p1": "الشبكة الأولى التي تمتلك فيها هويتك وجهات اتصالك ومجموعاتك.",
+    "index-hero-h2": "في شبكتك",
+    "index-hero-p1": "مراسلة خاصة وآمنة.<br>الشبكة الأولى التي تمتلك فيها جهات اتصالك ومجموعاتك.",
     "index-hero-download-desktop-btn-title": "نزّل تطبيق سطح مكتب SimpleX",
     "index-testflight-title": "إصدار SimpleX التجريبي ل iOS على TestFlight",
     "index-f-droid-title": "تطبيق SimpleX من خلال F-Droid",
