--- a/website/langs/cs.json
+++ b/website/langs/cs.json
@@ -259,9 +259,9 @@
     "directory": "Složka",
     "about-and-contact-us": "O nás & Kontakt",
     "navbar-token": "Token",
-    "index-hero-h1": "Žít<br>svobodně",
-    "index-hero-h2": "Svoboda a Bezpečnost Vaší Komunikace",
-    "index-hero-p1": "První síť, kde vaše identita, kontakty a skupiny patří vám.",
+    "index-hero-h1": "Žijte<br>svobodně",
+    "index-hero-h2": "Ve Své Síti",
+    "index-hero-p1": "Soukromé a bezpečné zasílání zpráv.<br>První síť, kde vaše kontakty a skupiny patří vám.",
     "index-hero-download-desktop-btn-title": "Stáhněte si desktopovou aplikaci SimpleX",
     "index-testflight-title": "Beta verze SimpleX pro iOS na TestFlight",
     "index-f-droid-title": "Stáhnout aplikaci SimpleX přes F-Droid",
