--- a/website/langs/fr.json
+++ b/website/langs/fr.json
@@ -261,8 +261,8 @@
     "navbar-token": "Jeton",
     "about-and-contact-us": "À propos & Contactez-nous",
     "index-hero-h1": "Soyez<br>Libre",
-    "index-hero-h2": "La liberté et la sécurité<br>de vos communications",
-    "index-hero-p1": "Le premier réseau où vous possédez votre identité, vos contacts et vos groupes.",
+    "index-hero-h2": "Dans Votre Réseau",
+    "index-hero-p1": "Messagerie privée et sécurisée.<br>Le premier réseau où vous possédez vos contacts et vos groupes.",
     "index-hero-download-desktop-btn-title": "Téléchargez l’application de bureau SimpleX",
     "index-testflight-title": "Version bêta de SimpleX pour iOS sur TestFlight",
     "index-f-droid-title": "Application SimpleX via F-Droid",
