--- a/website/langs/hu.json
+++ b/website/langs/hu.json
@@ -259,14 +259,14 @@
     "directory": "Csoportjegyzék",
     "about-and-contact-us": "Névjegy és kapcsolat",
     "index-hero-h1": "Legyen<br>szabad",
-    "index-hero-p1": "Az első olyan hálózat, ahol a felhasználó a tulajdonosa saját identitásának, partnereinek és csoportjainak.",
+    "index-hero-p1": "Privát és biztonságos üzenetküldés.<br>Az első olyan hálózat, ahol Ön a tulajdonosa saját partnereinek és csoportjainak.",
     "index-hero-download-desktop-btn-title": "SimpleX számítógépes alkalmazásának letöltése",
     "index-security-assessment-title": "Biztonsági auditok",
     "index-security-review-2022-title": "Biztonsági audit 2022",
     "index-security-review-2024-title": "Biztonsági audit 2024",
     "index-security-audits-label": "Biztonsági<br>auditok",
     "index-publications-heise-title": "A Heise Online kiadványai",
-    "index-hero-h2": "A kommunikációjának<br>szabadsága és biztonsága",
+    "index-hero-h2": "A Saját Hálózatában",
     "index-testflight-title": "Nyilvános betekintés az iOS alkalmazás fejlesztésébe a TestFlighton",
     "index-f-droid-title": "SimpleX alkalmazás az F-Droidon keresztül",
     "index-publications-privacy-guides-title": "A Privacy Guides üzenetváltó ajánlásai",
