--- a/website/langs/id.json
+++ b/website/langs/id.json
@@ -259,8 +259,8 @@
     "simplex-unique-card-1-p-1": "SimpleX melindungi privasi profil, kontak, dan metadata Anda, menyembunyikannya dari server jaringan SimpleX dan pengamat mana pun.",
     "get-simplex": "Dapatkan <a href=\"/downloads\">aplikasi desktop</a> SimpleX",
     "index-hero-h1": "Bebaslah",
-    "index-hero-h2": "Kebebasan & Keamanan<br>Komunikasi Anda",
-    "index-hero-p1": "Jaringan pertama tempat Anda memiliki identitas, kontak, dan grup Anda.",
+    "index-hero-h2": "Di Jaringan Anda",
+    "index-hero-p1": "Pesan yang privat dan aman.<br>Jaringan pertama tempat Anda memiliki kontak dan grup Anda.",
     "index-hero-download-desktop-btn-title": "Unduh Aplikasi Desktop SimpleX",
     "index-testflight-title": "Pratinjau iOS publik di TestFlight",
     "index-f-droid-title": "Repositori SimpleX F-Droid",
