--- a/website/langs/it.json
+++ b/website/langs/it.json
@@ -258,8 +258,8 @@
     "docs-dropdown-14": "SimpleX per il lavoro",
     "about-and-contact-us": "Informazioni e contatti",
     "directory": "Directory",
-    "index-hero-h2": "Libertà e sicurezza<br>delle tue comunicazioni",
-    "index-hero-p1": "La prima rete in cui possiedi la tua identità, i contatti e i gruppi.",
+    "index-hero-h2": "Nella Tua Rete",
+    "index-hero-p1": "Messaggistica privata e sicura.<br>La prima rete in cui possiedi i tuoi contatti e i tuoi gruppi.",
     "index-hero-download-desktop-btn-title": "Scarica l'app desktop di SimpleX",
     "index-testflight-title": "Anteprima pubblica per iOS su TestFlight",
     "index-f-droid-title": "SimpleX via F-Droid",
