--- a/website/langs/ja.json
+++ b/website/langs/ja.json
@@ -259,8 +259,8 @@
     "directory": "ディレクトリ",
     "about-and-contact-us": "概要・お問い合わせ",
     "index-hero-h1": "自由で<br>あれ",
-    "index-hero-h2": "あなたのコミュニケーションに<br>自由とセキュリティを",
-    "index-hero-p1": "アイデンティティ、連絡先、グループをあなた自身が所有できる、最初のネットワーク。",
+    "index-hero-h2": "あなたのネットワークで",
+    "index-hero-p1": "プライベートで安全なメッセージング。<br>連絡先とグループをあなた自身が所有できる最初のネットワーク。",
     "index-hero-download-desktop-btn-title": "SimpleX デスクトップアプリをダウンロード",
     "index-security-assessment-title": "セキュリティ監査",
     "index-security-review-2022-title": "セキュリティ監査 2022",
