--- a/website/langs/pl.json
+++ b/website/langs/pl.json
@@ -260,8 +260,8 @@
     "navbar-token": "Token",
     "about-and-contact-us": "O nas i Kontakt",
     "index-hero-h1": "Bądź<br>Wolny",
-    "index-hero-h2": "Wolność i bezpieczeństwo<br/>Twojej Komunikacji",
-    "index-hero-p1": "Pierwsza sieć, w której posiadasz na własność swoją tożsamość, kontakty i grupy.",
+    "index-hero-h2": "W Swojej Sieci",
+    "index-hero-p1": "Prywatne i bezpieczne wiadomości.<br>Pierwsza sieć, w której posiadasz na własność swoje kontakty i grupy.",
     "index-hero-download-desktop-btn-title": "Pobierz Aplikację SimpleX na Komputer",
     "index-testflight-title": "SimpleX iOS beta-wydanie na TestFlight",
     "index-f-droid-title": "SimpleX app z F-Droid",
