--- a/website/langs/pt_BR.json
+++ b/website/langs/pt_BR.json
@@ -260,8 +260,8 @@
     "about-and-contact-us": "Sobre e Contato",
     "navbar-token": "Token",
     "index-hero-h1": "Seja<br>Livre",
-    "index-hero-h2": "Liberdade & Segurança<br>Em Suas Comunicações",
-    "index-hero-p1": "A primeira rede onde você é dono da sua identidade, contatos e grupos.",
+    "index-hero-h2": "Na Sua Rede",
+    "index-hero-p1": "Mensagens privadas e seguras.<br>A primeira rede onde você é dono dos seus contatos e grupos.",
     "index-hero-download-desktop-btn-title": "Baixe o aplicativo SimpleX Desktop",
     "index-testflight-title": "SimpleX iOS - versão beta no TestFlight",
     "index-f-droid-title": "Aplicativo SimpleX no F-Droid",
