--- a/website/langs/de.json
+++ b/website/langs/de.json
@@ -260,7 +260,7 @@
     "directory": "Verzeichnis",
     "index-hero-h1": "Sei<br>frei",
     "index-hero-h2": "In Deinem Netzwerk",
-    "index-hero-p1": "Privater und sicherer Nachrichtenaustausch.<br>Das erste Netzwerk, in dem Ihnen Ihre Kontakte und Gruppen gehören.",
+    "index-hero-p1": "Privater und sicherer Nachrichtenaustausch.<br>Das erste Netzwerk, in dem Ihnen<br>Ihre Kontakte und Gruppen gehören.",
     "index-hero-download-desktop-btn-title": "Download der SimpleX Desktop-App",
     "index-testflight-title": "Öffentlicher iOS-Preview auf TestFlight",
     "index-f-droid-title": "SimpleX-App über das F-Droid-Repository",
