--- a/website/langs/en.json
+++ b/website/langs/en.json
@@ -262,7 +262,7 @@
     "please-use-link-in-mobile-app": "Please use the link in the mobile app",
     "index-hero-h1": "Be<br>Free",
     "index-hero-h2": "In Your Network",
-    "index-hero-p1": "Private and secure messaging.<br>The first network where you own your contacts and groups.",
+    "index-hero-p1": "Private and secure messaging.<br>The first network where you own<br>your contacts and groups.",
     "index-hero-download-desktop-btn-title": "Download SimpleX Desktop App",
     "index-testflight-title": "SimpleX iOS beta-release on TestFlight",
     "index-f-droid-title": "SimpleX app via F-Droid",
