--- a/website/langs/it.json
+++ b/website/langs/it.json
@@ -259,7 +259,7 @@
     "about-and-contact-us": "Informazioni e contatti",
     "directory": "Directory",
     "index-hero-h2": "Nella Tua Rete",
-    "index-hero-p1": "Messaggistica privata e sicura.<br>La prima rete in cui possiedi i tuoi contatti e i tuoi gruppi.",
+    "index-hero-p1": "Messaggistica privata e sicura.<br>La prima rete in cui possiedi<br>i tuoi contatti e i tuoi gruppi.",
     "index-hero-download-desktop-btn-title": "Scarica l'app desktop di SimpleX",
     "index-testflight-title": "Anteprima pubblica per iOS su TestFlight",
     "index-f-droid-title": "SimpleX via F-Droid",
