--- a/website/langs/ru.json
+++ b/website/langs/ru.json
@@ -258,9 +258,9 @@
     "docs-dropdown-12": "Безопасность",
     "docs-dropdown-11": "Часто задаваемые вопросы",
     "docs-dropdown-14": "SimpleX для бизнеса",
-    "index-hero-h1": "<div class=\"small\">Будьте<br>Свободны</div>",
+    "index-hero-h1": "<div class=\"small\">Будь<br>Свободен</div>",
     "index-hero-h2": "В Своей Сети",
-    "index-hero-p1": "Приватный и безопасный обмен сообщениями.<br>Первая сеть, в которой Вам принадлежат Ваши контакты и группы.",
+    "index-hero-p1": "Конфиденциальная и безопасная передача сообщений.<br>Первая сеть, где Вам принадлежат Ваши контакты и группы.",
     "index-hero-download-desktop-btn-title": "Загрузить приложение SimpleX для компьютера",
     "index-testflight-title": "Бета-релиз для iOS на TestFlight",
     "index-f-droid-title": "Загрузить через F-Droid",
