--- a/website/langs/hu.json
+++ b/website/langs/hu.json
@@ -258,8 +258,8 @@
     "docs-dropdown-14": "SimpleX üzleti célra",
     "directory": "Csoportjegyzék",
     "about-and-contact-us": "Névjegy és kapcsolat",
-    "index-hero-h1": "Legyen<br>szabad",
-    "index-hero-p1": "Privát és biztonságos üzenetküldés.<br>Az első olyan hálózat, ahol Ön a tulajdonosa<br>saját partnereinek és csoportjainak.",
+    "index-hero-h1": "<div class=\"medium\">Legyen<br>szabad</div>",
+    "index-hero-p1": "Privát és biztonságos üzenetküldés.<br>Az első olyan hálózat, ahol Ön a tulajdonosa saját partnereinek és csoportjainak.",
     "index-hero-download-desktop-btn-title": "SimpleX számítógépes alkalmazásának letöltése",
     "index-security-assessment-title": "Biztonsági auditok",
     "index-security-review-2022-title": "Biztonsági audit 2022",
