website: update home page (#6647)
* website: update home page

* translate

* layout

* add languages to home page

---------

Co-authored-by: Evgeny @ SimpleX Chat <259188159+evgeny-simplex@users.noreply.github.com>

--- a/website/langs/de.json
+++ b/website/langs/de.json
@@ -259,8 +259,8 @@
     "about-and-contact-us": "Über uns & Kontakt",
     "directory": "Verzeichnis",
     "index-hero-h1": "Sei<br>frei",
-    "index-hero-h2": "Freiheit & Sicherheit<br>Ihrer Kommunikation",
-    "index-hero-p1": "Das erste Netzwerk, in welchem Sie die volle Kontrolle über Ihre Identität, Kontakte und Gruppen behalten.",
+    "index-hero-h2": "In Deinem Netzwerk",
+    "index-hero-p1": "Privater und sicherer Nachrichtenaustausch.<br>Das erste Netzwerk, in dem Ihnen<br>Ihre Kontakte und Gruppen gehören.",
     "index-hero-download-desktop-btn-title": "Download der SimpleX Desktop-App",
     "index-testflight-title": "Öffentlicher iOS-Preview auf TestFlight",
     "index-f-droid-title": "SimpleX-App über das F-Droid-Repository",
