--- a/website/langs/en.json
+++ b/website/langs/en.json
@@ -261,8 +261,8 @@
     "please-enable-javascript": "Please enable JavaScript to see the QR code.",
     "please-use-link-in-mobile-app": "Please use the link in the mobile app",
     "index-hero-h1": "Be<br>Free",
-    "index-hero-h2": "Freedom & Security<br>of Your Communications",
-    "index-hero-p1": "The first network where you own your identity, contacts, and groups.",
+    "index-hero-h2": "In Your Network",
+    "index-hero-p1": "Private and secure messaging.<br>The first network where you own<br>your contacts and groups.",
     "index-hero-download-desktop-btn-title": "Download SimpleX Desktop App",
     "index-testflight-title": "SimpleX iOS beta-release on TestFlight",
     "index-f-droid-title": "SimpleX app via F-Droid",
