--- a/website/langs/es.json
+++ b/website/langs/es.json
@@ -259,8 +259,8 @@
     "directory": "Directorio",
     "about-and-contact-us": "Quiénes somos & Contacto",
     "index-hero-h1": "Sé<br>Libre",
-    "index-hero-h2": "Libertad y Seguridad<br>en Tus Comunicaciones",
-    "index-hero-p1": "La primera red donde tu identidad, contactos y grupos te pertenecen.",
+    "index-hero-h2": "En Tu Red",
+    "index-hero-p1": "Mensajería privada y segura.<br>La primera red donde<br>tus contactos y grupos te pertenecen.",
     "index-hero-download-desktop-btn-title": "Descargar SimpleX Desktop App",
     "index-testflight-title": "Betas SimpleX para iOS en TestFlight",
     "index-f-droid-title": "SimpleX app vía F-Droid",
