--- a/website/langs/ru.json
+++ b/website/langs/ru.json
@@ -313,5 +313,13 @@
     "messengers-comparison-section-list-point-5": "2-факторный обмен ключами опциональный, через верификацию кода безопасности.",
     "messengers-comparison-section-list-point-6": "Пост-квантовое согласование ключей происходит не всегда, защищая только часть согласований.",
     "navbar-token": "Токен",
-    "navbar-old-site": "Старый сайт"
+    "navbar-old-site": "Старый сайт",
+    "why-p1": "Вы родились без аккаунта.",
+    "why-p2": "Никто не отслеживал ваши разговоры. Никто не составлял карту ваших перемещений. Приватность не была функцией &mdash; это был образ жизни.",
+    "why-p3": "Потом мы вышли в интернет, и каждая платформа попросила частичку вас &mdash; ваше имя, ваш номер, ваших друзей. Мы смирились с тем, что за возможность общаться приходится отдавать информацию о том, с кем мы общаемся. Каждое поколение людей и технологий жило так &mdash; телефон, электронная почта, мессенджеры, социальные сети. Казалось, что другого пути нет.",
+    "why-p4": "Другой путь есть. Сеть без номеров телефонов. Без имён пользователей. Без аккаунтов. Без каких-либо идентификаторов. Сеть, которая соединяет людей и передаёт зашифрованные сообщения, не зная, кто с кем связан.",
+    "why-p5": "Не более надёжный замок на чужой двери. Не более вежливый хозяин, который уважает вашу приватность, но всё равно ведёт учёт всех посетителей. Вы не гость. Вы у себя дома. Ваши разговоры принадлежат вам, как это всегда было до интернета. Сеть &mdash; это не место, куда вы приходите. Это место, которое вы создаёте и которым владеете. И никто не может это у вас отнять, делаете ли вы его приватным или публичным.",
+    "why-p6": "Древнейшая человеческая свобода &mdash; говорить с другим человеком без слежки &mdash; построенная на инфраструктуре, которая не может её предать.",
+    "why-p7": "Потому что мы уничтожили саму возможность узнать, кто вы. Чтобы вашу свободу невозможно было отнять.",
+    "why-tagline": "Будь свободен в своей сети"
 }
