why we built SimpleX Network

--- a/website/langs/en.json
+++ b/website/langs/en.json
@@ -322,5 +322,6 @@
     "why-p5": "Not a better lock on someone else&apos;s door. Not a nicer landlord that respects your privacy, but still keeps the record of all visitors. You are not a guest. You are home. Your conversations belong to you, like it had always been before the Internet. The network is not a place you visit. It is a place you create and own. And nobody can take it from you, whether you make it private or public.",
     "why-p6": "The oldest human freedom &mdash; to speak to another person without being watched &mdash; built on infrastructure that cannot betray it.",
     "why-p7": "Because we destroyed the power to know who you are. So that your power can never be taken.",
-    "why-tagline": "Be free in your network"
+    "why-tagline": "Be free in your network",
+    "why-footer-link": "Why we built SimpleX"
 }
