--- a/website/langs/ru.json
+++ b/website/langs/ru.json
@@ -321,5 +321,6 @@
     "why-p5": "Не более надёжный замок на чужой двери. Не более вежливый хозяин, который уважает вашу приватность, но всё равно ведёт учёт всех посетителей. Вы не гость. Вы у себя дома. Ваши разговоры принадлежат вам, как это всегда было до интернета. Сеть &mdash; это не место, куда вы приходите. Это место, которое вы создаёте и которым владеете. И никто не может это у вас отнять, делаете ли вы его приватным или публичным.",
     "why-p6": "Древнейшая человеческая свобода &mdash; говорить с другим человеком без слежки &mdash; построенная на инфраструктуре, которая не может её предать.",
     "why-p7": "Потому что мы уничтожили саму возможность узнать, кто вы. Чтобы вашу свободу невозможно было отнять.",
-    "why-tagline": "Будь свободен в своей сети"
+    "why-tagline": "Будь свободен в своей сети",
+    "why-footer-link": "Почему мы создали SimpleX"
 }
