--- a/website/langs/en.json
+++ b/website/langs/en.json
@@ -281,7 +281,7 @@
     "index-messaging-cta": "Learn more about SimpleX messaging",
     "index-nextweb-h2": "You Own<br>The Next Web",
     "index-nextweb-p1": "SimpleX is created on the belief that <span>you must own your profiles, contacts and communities</span>.",
-    "index-nextweb-p2": "A decentralized network nobody owns lets you connect with people and share ideas, to be free in your network.",
+    "index-nextweb-p2": "A decentralized network nobody owns lets you connect with people and share ideas, to be free and secure in your network.",
     "index-token-h2": "Communities That Last",
     "index-token-p1": "You will support your favorite groups with future Community Vouchers.",
     "index-token-p2": "Vouchers will pay for servers, to let your communities stay free and independent.",
