--- a/website/langs/ru.json
+++ b/website/langs/ru.json
@@ -279,7 +279,7 @@
     "index-messaging-cta": "Узнать больше про сообщения в SimpleX",
     "index-nextweb-h2": "Ваш Интернет Будущего",
     "index-nextweb-p1": "SimpleX создан на убеждении, что <span>Ваши профили, контакты и сообщества должны принадлежать Вам</span>.",
-    "index-nextweb-p2": "Децентрализованная сеть, которой никто не владеет, позволяет Вам общаться и делиться идеями, оставаясь свободными в Вашей сети.",
+    "index-nextweb-p2": "Децентрализованная сеть, которой никто не владеет, позволяет Вам общаться и делиться идеями, оставаясь свободными и защищёнными в Вашей сети.",
     "index-token-h2": "Стабильные Сообщества",
     "index-token-p1": "Вы сможете поддерживать Ваши любимые группы с помощью будущих Ваучеров Групп.",
     "index-token-p2": "Ваучеры будут использоваться для оплаты за серверы, чтобы группы оставались свободными и независимыми.",
