--- a/website/langs/ru.json
+++ b/website/langs/ru.json
@@ -321,7 +321,7 @@
     "why-p5": "Не более надёжный замок на чужой двери. Не более вежливый хозяин, который уважает вашу частную жизнь, но всё равно ведёт учёт всех посетителей. Вы не гость. Вы у себя дома. Ни один король не войдёт в ваш дом &mdash; вы суверенны.",
     "why-p6": "Ваши разговоры принадлежат вам, как это всегда было до интернета. Сеть &mdash; это не место, куда вы приходите. Это место, которое вы создаёте и которым владеете. И никто не может это у вас отнять, делаете ли вы его конфиденциальным или публичным.",
     "why-p7": "Древнейшая человеческая свобода &mdash; говорить с другим человеком без слежки &mdash; построенная на инфраструктуре, которая не может её предать.",
-    "why-p8": "Потому что мы уничтожили саму возможность узнать, кто вы. Чтобы вашу свободу невозможно было отнять.",
+    "why-p8": "Потому что мы разрушили саму возможность узнать, кто вы. Чтобы вашу свободу невозможно было отнять.",
     "why-tagline": "Будь свободен в своей сети.",
     "why-footer-link": "Почему мы это строим"
 }
