website: why we are building SimpleX Network (#6657)
* website: why SimpleX exists

* doc

* size, centred

* why

* why we built SimpleX Network

* why link

* para gap

* cleaner layout

* link to why

* update

* fix script

* ru correction

---------

Co-authored-by: Evgeny @ SimpleX Chat <259188159+evgeny-simplex@users.noreply.github.com>

--- a/website/langs/ru.json
+++ b/website/langs/ru.json
@@ -278,8 +278,8 @@
     "index-messaging-p2": "Для Вашей безопасности, серверы не могут видеть ваши сообщения <span>и с кем Вы разговариваете</span>.",
     "index-messaging-cta": "Узнать больше про сообщения в SimpleX",
     "index-nextweb-h2": "Ваш Интернет Будущего",
-    "index-nextweb-p1": "SimpleX основан на идее что <span>Ваши данные, контакты и группы должны принадлежать Вам</span>.",
-    "index-nextweb-p2": "Открытая децентрализованная сеть позволяет Вам соединяться с другими людьми и общаться свободно и безопасно.",
+    "index-nextweb-p1": "SimpleX создан на убеждении, что <span>Ваши профили, контакты и сообщества должны принадлежать Вам</span>.",
+    "index-nextweb-p2": "Децентрализованная сеть, которой никто не владеет, позволяет Вам общаться и делиться идеями, оставаясь свободными и защищёнными в Вашей сети.",
     "index-token-h2": "Стабильные Сообщества",
     "index-token-p1": "Вы сможете поддерживать Ваши любимые группы с помощью будущих Ваучеров Групп.",
     "index-token-p2": "Ваучеры будут использоваться для оплаты за серверы, чтобы группы оставались свободными и независимыми.",
@@ -313,5 +313,15 @@
     "messengers-comparison-section-list-point-5": "2-факторный обмен ключами опциональный, через верификацию кода безопасности.",
     "messengers-comparison-section-list-point-6": "Пост-квантовое согласование ключей происходит не всегда, защищая только часть согласований.",
     "navbar-token": "Токен",
-    "navbar-old-site": "Старый сайт"
+    "navbar-old-site": "Старый сайт",
+    "why-p1": "Вы родились без аккаунта.",
+    "why-p2": "Никто не отслеживал ваши разговоры. Никто не составлял карту ваших перемещений. Конфиденциальность не была функцией &mdash; это был образ жизни.",
+    "why-p3": "Потом мы вышли в интернет, и каждая платформа попросила частичку вас &mdash; ваше имя, ваш номер, ваших друзей. Мы смирились с тем, что за возможность общаться приходится отдавать информацию о том, с кем мы общаемся. Каждое поколение людей и технологий жило так &mdash; телефон, электронная почта, мессенджеры, социальные сети. Казалось, что другого пути нет.",
+    "why-p4": "Другой путь есть. Сеть без номеров телефонов. Без имён пользователей. Без аккаунтов. Без каких-либо идентификаторов пользователей. Сеть, которая соединяет людей и передаёт зашифрованные сообщения, не зная, кто с кем связан.",
+    "why-p5": "Не более надёжный замок на чужой двери. Не более вежливый хозяин, который уважает вашу частную жизнь, но всё равно ведёт учёт всех посетителей. Вы не гость. Вы у себя дома. Ни один король не войдёт в ваш дом &mdash; вы суверенны.",
+    "why-p6": "Ваши разговоры принадлежат вам, как это всегда было до интернета. Сеть &mdash; это не место, куда вы приходите. Это место, которое вы создаёте и которым владеете. И никто не может это у вас отнять, делаете ли вы его конфиденциальным или публичным.",
+    "why-p7": "Древнейшая человеческая свобода &mdash; говорить с другим человеком без слежки &mdash; построенная на инфраструктуре, которая не может её предать.",
+    "why-p8": "Потому что мы разрушили саму возможность узнать, кто вы. Чтобы вашу свободу невозможно было отнять.",
+    "why-tagline": "Будь свободен в своей сети.",
+    "why-footer-link": "Почему мы это строим"
 }
