--- a/website/langs/en.json
+++ b/website/langs/en.json
@@ -280,8 +280,8 @@
     "index-messaging-p2": "For your security and privacy, servers can&apos;t see your messages <span>and who you talk to</span>.",
     "index-messaging-cta": "Learn more about SimpleX messaging",
     "index-nextweb-h2": "You Own<br>The Next Web",
-    "index-nextweb-p1": "SimpleX is founded on the belief that <span>you must own your identity, contacts and communities</span>.",
-    "index-nextweb-p2": "Open and decentralized network lets you connect with people and share ideas: be free and secure.",
+    "index-nextweb-p1": "SimpleX is created on the belief that <span>you must own your profiles, contacts and communities</span>.",
+    "index-nextweb-p2": "A decentralized network nobody owns lets you connect with people and share ideas, to be free and secure in your network.",
     "index-token-h2": "Communities That Last",
     "index-token-p1": "You will support your favorite groups with future Community Vouchers.",
     "index-token-p2": "Vouchers will pay for servers, to let your communities stay free and independent.",
@@ -314,5 +314,15 @@
     "messengers-comparison-section-list-point-4": "Multi-device implementation compromises post-compromise security of Double Ratchet",
     "messengers-comparison-section-list-point-5": "2-factor key exchange is optional via security code verification.",
     "messengers-comparison-section-list-point-6": "Post-quantum key agreement is \"sparse\" &mdash; it protects only some of the ratchet steps.",
-    "navbar-old-site": "Old site"
+    "navbar-old-site": "Old site",
+    "why-p1": "You were born without an account.",
+    "why-p2": "Nobody tracked your conversations. No one drew a map of where you&apos;d been. Privacy was never a feature &mdash; it was the way of life.",
+    "why-p3": "Then we moved online, and every platform asked for a piece of you &mdash; your name, your number, your friends. We accepted that the price of talking to others is letting someone know who we talk to. Every generation, people and tech, had it this way &mdash; telephone, email, messengers, social media. It seemed the only way possible.",
+    "why-p4": "There is another way. A network with no phone numbers. No usernames. No accounts. No user identities of any kind. A network that connects people and carries encrypted messages without knowing who is connected.",
+    "why-p5": "Not a better lock on someone else&apos;s door. Not a nicer landlord that respects your privacy, but still keeps the record of all visitors. You are not a guest. You are home. No king can enter it &mdash; you are sovereign.",
+    "why-p6": "Your conversations belong to you, as it had always been before the Internet. The network is not a place you visit. It is a place you create and own. And nobody can take it from you, whether you make it private or public.",
+    "why-p7": "The oldest human freedom &mdash; to speak to another person without being watched &mdash; built on infrastructure that cannot betray it.",
+    "why-p8": "Because we destroyed the power to know who you are. So that <em>your</em> power can never be taken.",
+    "why-tagline": "Be free in your network.",
+    "why-footer-link": "Why we are building it"
 }
